clusters/mgmt-01/ops/logging/ingress-loki.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki
  namespace: logging
spec:
  ingressClassName: traefik
  rules:
    - host: loki.mgmt.litomi.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loki
                port:
                  number: 3100
